--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     box-sizing: border-box;
 }
 .hidden {
-    display: none;
+    display: none !important;
 }
 /*home-page styling*/
 .instructions-div{
