--- a/style.css
+++ b/style.css
@@ -155,12 +155,10 @@ input:focus{
 .category-box:hover {
     background-color: rgba(73, 68, 86, 0.5);
 }
-
 .category-box.disabled {
     pointer-events: none;
     opacity: 0.5;
 }
-
 #start-btn{
     background-color: #FEEAFA;
     color :#231942;
@@ -374,4 +372,144 @@ input:focus{
 #winner-message{
     font-size:30px;
     margin:80px auto;
+}
+
+/*Responsive styling*/
+@media (max-width: 600px) {
+    .player-container{
+        flex-direction: column;
+    }
+    h1{
+        margin-top : 80px;
+        font-size: 30px;
+        margin-bottom: 0px;
+    }
+    h3{
+        margin-bottom: 30px;
+    }
+    .image{
+        width: 100px;
+        height: 100px;
+    }
+    #versus-icon{
+        border-radius: 50%;
+        border:none;
+    }
+    .player1-div,
+    .player2-div{
+        gap : 10px;
+        padding: 5px 5px;
+    }
+    input{
+        width: 200px;     
+        height: 25px;
+        font-size: medium;
+    }
+    #next-btn{
+        padding: 5px 20px;
+        font-size: small;
+        height: 30px;
+    }
+    #category-page-heading{
+        text-align:center;
+        margin : 20px auto;
+        font-size: 30px;
+    }
+    #categories-div{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-gap: 5px;
+        margin: 10px 10px;
+    }
+    .category-box img {
+        width: 65px;
+        height: 65px;
+    }
+    .category-box p{
+        font-size: 12px;
+    }
+    #start-btn{
+        width:150px;
+        height:40px;
+        padding:10px 20px;
+        font-size:15px;
+        margin:5px;
+    }
+    .score-bar{
+        margin:20px auto;
+    } 
+    .player-score-bar{
+        height: 20px;
+    }
+    .stars-bar{
+        margin-left: 100px;
+        gap:50px;
+    }
+    #p1-easy,
+    #p1-medium,
+    #p1-hard,
+    #p2-easy,
+    #p2-medium,
+    #p2-hard{
+        width: 80px;
+        height: 15px;
+    }
+    #player1-name-para,
+    #player2-name-para{
+        margin-right: 40px;
+    }
+    .question-div{
+        width: 90%;
+        padding: auto 5px;
+    }
+    .q-info-div{
+        gap:40px;
+        font-size: 14px;
+        padding:5px 15px;
+    }
+    #question-text{
+        font-size: 20px;
+    }
+    .options-div{
+        justify-content: center;
+        padding: 5px 5px;
+    }  
+    .options-div button{
+        height: 40px;
+        font-size: 16px;
+    }
+    #results-page h2{
+        margin-bottom: 25px;
+    }
+    #results-page h3{
+        font-size: 20px;
+    }
+    .score-board{
+        font-size: 20px;
+    }
+    #row1 > div,
+    #row2 > div {
+        width : 150px;
+        height: 30px;
+        padding:5px 10px;
+    }
+    #choose-another-category,
+    #end-the-game{
+        padding: 5px 10px;
+        margin: 10px 20px;
+    }
+    .curr-score-board{
+        font-size: 20px;
+    }
+    .btn-div{
+        display: flex;
+        flex-direction: column;
+    }
+    #winner-message{
+        font-size:20px;
+        margin:50px 10px;
+    }
+    #post-questions-page p{
+        font-size:20px;
+    }
 }
