--- a/style.css
+++ b/style.css
@@ -217,7 +217,6 @@ input:focus{
     margin: 2px;
     height: 20px;
 }
-
 #player1-name-para,
 #player2-name-para{
     margin-right: 50px;
@@ -225,12 +224,10 @@ input:focus{
     margin-left : 5px;
     line-height: 25px;
 }
-
 .question-div{
     width: 80%;
     border: 2px solid #fc9efc;
 }
-
 .q-info-div{
     display: flex;
     flex-direction: row;
@@ -241,19 +238,16 @@ input:focus{
     font-weight: bold;
     padding:10px 20px;
 }
-
 #current-player,
 #current-category,
 #current-level{
     color: #f6aef6;
     font-weight: bolder;
 }
-
 #question-text{
     font-size: 25px;
     font-weight: bolder;
 }
-
 .options-div{
     display: flex;
     flex-direction: column;
@@ -261,7 +255,6 @@ input:focus{
     justify-content: center;
     padding: 10px 10px;
 }
-
 .options-div button{
     padding: 5px 20px;
     margin: 10px 10px;
@@ -274,7 +267,6 @@ input:focus{
     border: none;
     border-radius: 30px;
 }
-
 #next-question,
 .view-score-btn,
 #choose-another-category,
@@ -304,7 +296,6 @@ input:focus{
     padding: 10px 20px;
     margin:10px 20px 50px 20px;
 }
-
 #goto-home-page > a {
     text-decoration: none;
     background-color: #ffd6ff;
@@ -317,7 +308,6 @@ input:focus{
 #results-page h3{
     font-size: xx-large;
 }
-
 .curr-score-page,
 .score-board{
     display: flex;
@@ -328,13 +318,11 @@ input:focus{
     font-size: 40px;
     border: #ffd6ff;
 }
-
 #btn-div{
     display: flex;
     flex-direction: row;
     gap : 20px;
 }
-
 #choose-another-category,
 #end-the-game{
     padding: 10px 20px;
@@ -342,13 +330,11 @@ input:focus{
     margin: 10px 20px;
     color: #231942;
 }
-
 #row1,
 #row2{
     display: flex;
     flex-direction: row;
 }
-
 #row1 > div,
 #row2 > div {
     width : 200px;
@@ -357,18 +343,15 @@ input:focus{
     border: 1px solid #ffd6ff;
     font-weight: bold;
 }
-
 .curr-score-board{
     font-size: 20px;
     font-weight: bold;
     text-align: center;
 }
-
 #post-questions-page > p{
     font-size: 30px;
     margin:30px auto;
 }
-
 #winner-message{
     font-size:30px;
     margin:80px auto;
@@ -511,5 +494,139 @@ input:focus{
     }
     #post-questions-page p{
         font-size:20px;
+    }
+}
+@media (min-width:601px) and (max-width: 1024px) {
+    .player-container{
+        flex-direction: column;
+        gap:10px;
+        margin: 10px auto;
+    }
+    h1{
+        margin-top : 100px;
+        font-size: 40px;
+        margin-bottom: 0px;
+    }
+    h3{
+        margin-bottom: 20px;
+    }
+    .image{
+        width: 120px;
+        height: 120px;
+    }
+    .player1-div,
+    .player2-div{
+        gap : 10px;
+        padding: 10px 10px;
+    }
+    input{
+        width: 250px;     
+        height: 30px;
+        font-size: large;
+    }
+    #next-btn{
+        padding: 5px 20px;
+        font-size: large;
+        height: 50px;
+    }
+    #category-page-heading{
+        margin : 30px auto;
+        font-size: 40px;
+    }
+    #categories-div{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-gap: 10px;
+        margin: 15px 15px;
+    }
+    .category-box img {
+        width: 80px;
+        height: 80px;
+    }
+    .category-box p{
+        font-size: 16px;
+    }
+    #start-btn{
+        width:150px;
+        height:40px;
+        padding:10px 20px;
+        font-size:15px;
+        margin:5px;
+    }
+    .score-bar{
+        margin:20px auto;
+    } 
+    .player-score-bar{
+        height: 20px;
+    }
+    .stars-bar{
+        margin-left: 100px;
+        gap:50px;
+    }
+    #p1-easy,
+    #p1-medium,
+    #p1-hard,
+    #p2-easy,
+    #p2-medium,
+    #p2-hard{
+        width: 80px;
+        height: 15px;
+    }
+    #player1-name-para,
+    #player2-name-para{
+        margin-right: 40px;
+    }
+    .question-div{
+        width: 90%;
+        padding: auto 5px;
+    }
+    .q-info-div{
+        gap:40px;
+        font-size: 14px;
+        padding:5px 15px;
+    }
+    #question-text{
+        font-size: 20px;
+    }
+    .options-div{
+        justify-content: center;
+        padding: 5px 5px;
+    }  
+    .options-div button{
+        height: 40px;
+        font-size: 16px;
+    }
+    #results-page h2{
+        margin-bottom: 40px;
+    }
+    #results-page h3{
+        font-size: 30px;
+    }
+    .score-board{
+        font-size: 25px;
+    }
+    #message{
+        font-size: 40px;
+    }
+    #row1 > div,
+    #row2 > div {
+        width : 200px;
+        height: 5%;
+        padding:20px 15px;
+    }
+    #choose-another-category,
+    #end-the-game{
+        padding: 5px 10px;
+        margin: 10px 20px;
+    }
+    .curr-score-board{
+        font-size: 25px;
+    }
+    #winner-message{
+        font-size:30px;
+        margin:50px 10px;
+    }
+    #post-questions-page p{
+        font-size:25px;
     }
 }
